# bitcion-hodl-prophet

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  data.dvc  pyproject.toml
.dvc/: config
.github/actions/setup-environment/: action.yml
.github/workflows/: backend-ci.yml  client-ci.yml  data-pipeline-daily.yml  data-pipeline-hourly.yml  data-pipeline.yml  metrics.yml  training-pipeline-daily.yml  training-pipeline-hourly.yml
.github/workflows/actions/: setup-environment.yml
models/daily/: cls_model.onnx  minmax.pkl  model.onnx  production_cls_model.onnx  staging_minmax.pkl  staging_model.onnx
models/hourly/: cls_model.onnx  minmax.pkl  model.onnx
src/: config.py
src/api/: main.py
src/api/db/: client.py
src/api/models/: audit_log.py  model_metric.py
src/api/routers/: __init__.py  audit_log.py  metrics.py  predict.py  price.py
src/api/services/: audit_log_service.py  btc_service.py  forecast_service.py  metrics_service.py  metris_service.py  ml_service.py
src/api/tests/: api_endpoints_test.py  api_endpoints_tets.py  btc_service_test.py  forecast_service_test.py  ml_service_test.py
src/client/: Dockerfile  components.json  package-lock.json  package.json  tailwind.config.ts
src/client/src/: middleware.ts
src/client/src/api/: hooks.ts  index.ts
src/client/src/app/: globals.css  layout.tsx  page.tsx
src/client/src/app/dashboard/: page.tsx
src/client/src/components/compositions/: audit-log-table.tsx  data-type-badge.tsx  data-type-select.tsx  direction-prediction-card.tsx  metric-card.tsx  model-type-badge.tsx  navbar.tsx  price-card.tsx  price-chart.tsx  price-prediction-card.tsx
src/client/src/components/containers/: DashboardPage.tsx  HomePage.tsx
src/client/src/components/providers/: providers.tsx
src/client/src/components/ui/: badge.tsx  dropdown-menu.tsx  select.tsx  table.tsx
src/client/src/libs/: api.ts  env.ts  use-is-mobile.ts  utils.ts
src/data/: fetch.py  ks_test.py  process.py  validate_data.py
src/model/: download_production_models.py  eval_model.py  helpers.py  train_model.py
src/model/helpers/: common.py  mlflow.py  production_models_versions.py
src/model/helpers/classification/: model.py  preprocessing.py
src/model/helpers/regression/: model.py  preprocessing.py
src/utils/: data.py  logger.py
src/validation/: validate_production_predictions.py
src/visualization/: plot_data.py
src/vizualization/: helpers.py  plot_data.py
