[tool.poetry]
name = "bitcion-hodl-prophet"
version = "0.1.0"
description = ""
authors = ["perkzen <perko.domen@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
serve = "uvicorn src.service.main:app --reload"
fetch = "python -m src.data.fetch"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
mlflow = "^2.12.2"
onnxruntime = "^1.17.3"
poethepoet = "^0.26.1"
yfinance = "^0.2.38"
tf2onnx = "^1.16.1"
tensorflow-model-optimization = "^0.8.0"
tensorflow = "^2.16.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
jupyter = "^1.0.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
