[tool.poetry]
name = "bitcoin-hodl-prophet"
version = "0.1.0"
description = ""
authors = ["perkzen <perko.domen@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
serve = "python -m src.api.main"
fetch = "python -m src.data.fetch"
process = "python -m src.data.process"
ks-test = "python -m src.data.ks_test"
validate = "python -m src.data.validate_data"
train = "python -m src.model.train_model"
eval = "python -m src.model.eval_model"
plot = "python -m src.vizualization.plot_data"
test = "pytest src/api"
lint = "ruff check ."
download_models = "python -m src.model.download_production_models"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
mlflow = "^2.12.2"
onnxruntime = "^1.18.0"
poethepoet = "^0.26.1"
yfinance = "^0.2.38"
tf2onnx = "^1.16.1"
tensorflow-model-optimization = "^0.8.0"
scipy = "^1.13.0"
tf-keras = "^2.16.0"
skl2onnx = "^1.17.0"
pydantic-settings = "^2.3.0"
dagshub = "^0.3.27"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
jupyter = "^1.0.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
